Contract cap update
Re-Analysing quantity of investiment necessary to realize Full Reforestation.

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-INFURA_API_KEY=
-mnemonic="famous voice almost lyrics sell trouble verify drift catalog spell tissue found"
+INFURA_API_KEY=;
+MNEMONIC="famous voice almost lyrics sell trouble verify drift catalog spell tissue found";
