--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/truffle-box/drizzle-box#readme",
   "dependencies": {
-    "@openzeppelin/contracts": "^2.4.0",
+    "@gnosis.pm/safe-apps-sdk": "^0.4.1",
+    "@openzeppelin/contracts": "^2.5.1",
     "@truffle/hdwallet-provider": "^1.1.0",
     "dotenv": "^8.2.0",
-    "ganache-cli": "^6.10.2"
+    "ganache-cli": "^6.10.2",
+    "web3": "^1.3.0"
   }
 }
