--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@truffle/hdwallet-provider": "^1.1.0",
     "dotenv": "^8.2.0",
     "ganache-cli": "^6.10.2",
+    "node": "^14.13.0",
     "web3": "^1.3.0"
   }
 }
